--- a/AML_2)_Dataset_DataLoader.ipynb
+++ b/AML_2)_Dataset_DataLoader.ipynb
@@ -7,7 +7,7 @@
       "toc_visible": true,
       "machine_shape": "hm",
       "mount_file_id": "1mWk0ndToqfnviNyvSHXK92LoZ4Uhzwpu",
-      "authorship_tag": "ABX9TyM35iDcXt6KiqqULBBKEVn+",
+      "authorship_tag": "ABX9TyOef/O45iSPPpvGsloCjXnU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "ArRSaxh-7Tc4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
         "id": "XiylgMcR7Ta1",
         "outputId": "5326d929-3dd7-4fb7-d5cb-4dc335d1eaab"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         "id": "KAfXGXZ87TYn",
         "outputId": "54e7b947-5245-4aa1-842d-c7a98faee596"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +506,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -558,7 +558,7 @@
       "metadata": {
         "id": "QFmHtxLGnG5m"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -571,7 +571,7 @@
       "metadata": {
         "id": "dTiGwGipnJ5L"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +600,7 @@
       "metadata": {
         "id": "-96pxB_ID9JU"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +616,7 @@
         "id": "Z55KFtvKEOJw",
         "outputId": "c623fd35-1afd-41af-e952-bbae211e64ea"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +642,7 @@
         "id": "MuF6gGINVtWP",
         "outputId": "0aeb25ff-8d49-42f2-f9ac-17d80f0fd8b8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +668,7 @@
         "id": "zD6Ct74ZVxY1",
         "outputId": "5de045f3-719b-4b72-b0f9-397f076ba6cf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -710,7 +710,7 @@
       "metadata": {
         "id": "Grh4Sv_mEffV"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +725,7 @@
         "id": "g3jvpX-9EiWe",
         "outputId": "8854c99e-50eb-481b-a691-9a53ab400401"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +751,7 @@
         "id": "UM8eRrUhWCDH",
         "outputId": "15b5dc62-fb5c-4673-d7a1-64a530e82cc6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +783,7 @@
       "metadata": {
         "id": "ASEo2psna5Xt"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +812,7 @@
       "metadata": {
         "id": "F_T2GDeUTh8O"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -828,7 +828,7 @@
         "id": "fXuZ8FTCTh5s",
         "outputId": "6779bc9b-b434-45ba-f583-bc5db258cc36"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -854,7 +854,7 @@
         "id": "56rngPa7YZ5j",
         "outputId": "7d291cd4-ff39-40a9-fd1c-1e33407ae6b7"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -880,7 +880,7 @@
         "id": "KcVJcKwvYnGe",
         "outputId": "9573b5eb-d9c5-494f-d97f-b89245d1c067"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -930,7 +930,7 @@
       "metadata": {
         "id": "SN5mmr_806Vc"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -949,13 +949,13 @@
       "metadata": {
         "id": "k_CnyiupGccf"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "len(y_targets_train_downsampled2), len(y_targets_eval_test2), y_targets_train_downsampled2.apply(sum).sum(), y_targets_eval_test2.apply(sum).sum()"
+        "len(y_targets_train_downsampled2), len(y_targets_eval_test2), y_targets_train_downsampled2.apply(sum).sum(), y_targets_eval_test2.apply(sum).sum()\n"
       ],
       "metadata": {
         "colab": {
@@ -964,7 +964,7 @@
         "id": "7SnxgfJDG7vU",
         "outputId": "d75bf3e9-400a-4f4f-a4a3-854694b17fa5"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -990,7 +990,7 @@
         "id": "fGzKrlWBX7N5",
         "outputId": "faa4488f-a41d-4cf7-9b8a-f63e2e5f28b2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1016,7 +1016,7 @@
         "id": "w6qJ4s4OXSSL",
         "outputId": "14a5c634-1b88-4264-8484-e117ea5ad7eb"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,7 +1043,7 @@
       "metadata": {
         "id": "_X_k99FYK6Ym"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1059,7 +1059,7 @@
         "id": "_OZ85NDKL_XH",
         "outputId": "db017dd8-408f-4566-bfce-c71728dbaec8"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1085,7 +1085,7 @@
       "metadata": {
         "id": "z7IkjOkcShMX"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1104,7 +1104,7 @@
         "id": "89Fuh7lKSUqB",
         "outputId": "9296cb81-68ee-4f1c-d5ee-0a131bdb4070"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1157,7 +1157,7 @@
       "metadata": {
         "id": "sXyEoKiiGS_9"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1191,7 +1191,7 @@
         "id": "x0Lp0icJNJJH",
         "outputId": "95a44b99-c20d-420d-ac3b-6d29d7c3cd65"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1267,7 +1267,7 @@
         "id": "LSsk1rYWNheQ",
         "outputId": "38dde234-00f5-4c87-f6a9-77b081c65f39"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1323,7 +1323,7 @@
         "id": "vnj0zFlvNZ4k",
         "outputId": "1d8b2a73-675f-4655-ae2c-3f1f25bf843e"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1378,7 +1378,7 @@
         "id": "22-2hUleNlVy",
         "outputId": "13c83e11-8c28-425c-db2f-603c9f968197"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1433,7 +1433,7 @@
         "outputId": "8e32f3d4-0220-4530-f4ee-298b8da18609",
         "id": "CwO6iJpJXIXm"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1478,7 +1478,7 @@
         "outputId": "de43dcb0-3fba-41af-c12d-89b1041fbf3d",
         "id": "KnBvEnj8XIXn"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1533,7 +1533,7 @@
         "id": "GGZFKezfTlPt",
         "outputId": "5976e514-728b-491b-96a9-c9a2486ab906"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1578,7 +1578,7 @@
         "id": "tfXOsEtiTlN4",
         "outputId": "b12e3900-a5f7-40a6-9642-89ceb5062fb4"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1633,7 +1633,7 @@
         "id": "wTIkF8ciTlpt",
         "outputId": "a7c6b4a7-9f1d-4758-8d61-661c87fdfbad"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1678,7 +1678,7 @@
         "id": "8vFhmNNGTlnV",
         "outputId": "a862b25b-6e4c-4763-fd71-42c8df083510"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1713,7 +1713,7 @@
       "metadata": {
         "id": "N0NMA3PGVhX5"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1724,7 +1724,7 @@
       "metadata": {
         "id": "8sqTrFiRWEUv"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1744,7 +1744,7 @@
         "aml_dataloader_id_downs2 = DataLoader(\n",
         "    aml_dataset_id_downs2,\n",
         "    batch_size= None,\n",
-        "    shuffle=True,\n",
+        "    shuffle=False,\n",
         "    num_workers=0,\n",
         "    pin_memory=False, # if we have GPU, set pin_memory=True\n",
         "    drop_last=False, # every sample in dataset is important, even if the final batch size varies. So will not drop it.\n",
@@ -1759,7 +1759,7 @@
         "id": "SMS-E-Q7J0Mc",
         "outputId": "80455a51-36fa-4291-df27-eca941b0242b"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1781,7 +1781,7 @@
       "metadata": {
         "id": "oMk8zseTWRTo"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1815,7 +1815,7 @@
         "id": "r-mZwBwxJ0KU",
         "outputId": "be31fbd7-5e25-4668-ce2c-4c0598d828a7"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1837,7 +1837,7 @@
       "metadata": {
         "id": "wuyZ0_FPWXFQ"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1871,7 +1871,7 @@
         "id": "OarG8t2MKATT",
         "outputId": "e71e4808-3b12-4ec9-b916-577e221739e0"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1929,7 +1929,7 @@
         "id": "XOWOS1uvoNW0",
         "outputId": "a7b0061c-987a-4f54-f2e0-be8c2989eeab"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1964,7 +1964,7 @@
       "metadata": {
         "id": "0OSd6_pioNyF"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1990,7 +1990,7 @@
       "metadata": {
         "id": "mLo8rgEWtN9s"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2016,7 +2016,7 @@
         "collapsed": true,
         "id": "SitYS9oVX4Gg"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2032,7 +2032,7 @@
       "metadata": {
         "id": "sRKfy1ZpX4Gg"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2057,7 +2057,7 @@
       "metadata": {
         "id": "J4z1FlhBoOUS"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2073,7 +2073,7 @@
       "metadata": {
         "id": "97CRU6d-v_uc"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2099,7 +2099,7 @@
         "collapsed": true,
         "id": "c0gEiNEaoO4I"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2115,7 +2115,7 @@
       "metadata": {
         "id": "Ai0hwNWByXcl"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2150,7 +2150,7 @@
       "metadata": {
         "id": "a221P0BDJsoM"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2167,7 +2167,7 @@
       "metadata": {
         "id": "hRO9AN2ZWM8t"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2183,7 +2183,7 @@
       "metadata": {
         "id": "9i6Ym19dWNbL"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     }
   ]
