--- a/AML_3)_Model_Training.ipynb
+++ b/AML_3)_Model_Training.ipynb
@@ -756,7 +756,7 @@
         "\n",
         "\n",
         "- 'account'                          cat 0-43557,  ---> size ~35\n",
-        "- 'day_of_week_encoded':             cat   0-6  ----> root 3 size~ 2\n",
+        "- 'day_of_week_encoded':             cat   0-6  ----> size~ 2\n",
         "- 'hour':                            cat   0-23 ----> size ~ 3\n",
         "- 'transaction_type_encoded':        cat   0-1  ----> size ~ 1\n",
         "- 'time_interval_normalized':        numerical\n",
@@ -770,55 +770,6 @@
       "metadata": {
         "id": "dBI6qHorQ3zm"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 157
-        },
-        "id": "MvIJCycMA02r",
-        "outputId": "43e2891a-6027-4c30-b8cf-b31c5829b7b1"
-      },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "\" \\nnote:\\ncat_features = [['day_of_week_encoded', xx], ['hour', xx],\\n['transaction_type_encoded', xx],['account_interaction_encoded', 95],\\n['payment_currency_encoded', xx],['received_currency_encoded', xx],\\n['sender_bank_location_encoded', xx],['receiver_bank_location_encoded', xx]]\\n\\n\\n- 'account'                          cat 0-43557,  ---> size ~35\\n- 'day_of_week_encoded':             cat   0-6  ----> root 3 size~ 2\\n- 'hour':                            cat   0-23 ----> size ~ 3\\n- 'transaction_type_encoded':        cat   0-1  ----> size ~ 1\\n- 'time_interval_normalized':        numerical\\n- 'amount_normalized':               numerical\\n- 'account_interaction_encoded'      cat   0-43557,  ---> size ~35\\n- 'payment_currency_encoded':        cat   0-12 ----> size ~ 2\\n- 'received_currency_encoded':       cat   0-12 ----> size ~ 2\\n- 'sender_bank_location_encoded':    cat   0-17 ----> size ~ 3\\n- 'receiver_bank_location_encoded':  cat   0-17 ----> size ~ 3\\n\""
-            ]
-          },
-          "execution_count": 33,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "\"\"\"\n",
-        "note:\n",
-        "cat_features = [['day_of_week_encoded', xx], ['hour', xx],\n",
-        "['transaction_type_encoded', xx],['account_interaction_encoded', 95],\n",
-        "['payment_currency_encoded', xx],['received_currency_encoded', xx],\n",
-        "['sender_bank_location_encoded', xx],['receiver_bank_location_encoded', xx]]\n",
-        "\n",
-        "\n",
-        "- 'account'                          cat 0-43557,  ---> size ~35\n",
-        "- 'day_of_week_encoded':             cat   0-6  ----> root 3 size~ 2\n",
-        "- 'hour':                            cat   0-23 ----> size ~ 3\n",
-        "- 'transaction_type_encoded':        cat   0-1  ----> size ~ 1\n",
-        "- 'time_interval_normalized':        numerical\n",
-        "- 'amount_normalized':               numerical\n",
-        "- 'account_interaction_encoded'      cat   0-43557,  ---> size ~35\n",
-        "- 'payment_currency_encoded':        cat   0-12 ----> size ~ 2\n",
-        "- 'received_currency_encoded':       cat   0-12 ----> size ~ 2\n",
-        "- 'sender_bank_location_encoded':    cat   0-17 ----> size ~ 3\n",
-        "- 'receiver_bank_location_encoded':  cat   0-17 ----> size ~ 3\n",
-        "\"\"\""
-      ]
     },
     {
       "cell_type": "code",
@@ -1033,7 +984,8 @@
           "text": [
             "Total trainable params: 3529279\n",
             "===> 16.67% completed,               training loss: 0.1903\n",
-            "===> 33.33% completed,               training loss: 0.2034\n"
+            "===> 33.33% completed,               training loss: 0.2034\n",
+            "===> 50.00% completed,               training loss: 0.1988\n"
           ]
         }
       ]
@@ -2977,7 +2929,7 @@
       "machine_shape": "hm",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOpgLCHgsOVbdJHSobPCW+L",
+      "authorship_tag": "ABX9TyPApTwNNPtTqsQijjwOPKuT",
       "include_colab_link": true
     },
     "kernelspec": {
