--- a/AML_3)_Model_Training.ipynb
+++ b/AML_3)_Model_Training.ipynb
@@ -934,58 +934,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4USID-k4c5YM",
-        "outputId": "d3004a6e-470e-4b00-df83-b70201d2d20b"
+        "outputId": "434e896b-f463-4a71-e4c4-647b674db42c"
       },
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [[43557, 35], [7, 2], [24, 3], [2, 1], [43557, 35], [13, 2], [13, 2], [18, 3], [18, 3]] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [[43557, 40], [7, 3], [24, 4], [2, 1], [43557, 40], [13, 3], [13, 3], [18, 4], [18, 4]] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [[43557, 50], [7, 4], [24, 6], [2, 2], [43557, 50], [13, 4], [13, 4], [18, 5], [18, 5]] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [80, 40, 15] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [85, 55, 35, 20, 15] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [90, 70, 50, 30, 20, 10] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [95, 75, 60, 50, 40, 30, 20, 10] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [100, 80, 60, 50, 40, 40, 30, 30, 20, 10, 10] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [100, 90, 80, 70, 60, 50, 40, 40, 30, 30, 20, 10, 10] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [10, 7, 1] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [15, 10, 5, 3, 1] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [18, 15, 10, 8, 4, 1] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [18, 16, 12, 7, 4, 2, 1] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [20, 18, 16, 12, 7, 4, 2, 1] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [25, 20, 18, 16, 12, 7, 4, 2, 1] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [35, 25, 20, 18, 16, 12, 7, 4, 2, 1] which is of type list.\n",
-            "  warnings.warn(message)\n",
-            "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [50, 45, 40, 30, 25, 20, 15, 10, 5, 1] which is of type list.\n",
-            "  warnings.warn(message)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total trainable params: 3529279\n",
-            "===> 16.67% completed,               training loss: 0.1903\n",
-            "===> 33.33% completed,               training loss: 0.2034\n",
-            "===> 50.00% completed,               training loss: 0.1988\n"
+            "Total trainable params: 3530550\n"
           ]
         }
       ]
