--- a/AML_3)_Model_Training.ipynb
+++ b/AML_3)_Model_Training.ipynb
@@ -926,15 +926,14 @@
         ")\n",
         "\n",
         "print(\"Best hyperparameters:\", study.best_params)\n",
-        "print(\"Best avr last3 F1:\", study.best_value)\n",
-        "#print(f\"Best F1: {study.best_value}\")"
+        "print(\"Best avr last3 F1:\", study.best_value)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4USID-k4c5YM",
-        "outputId": "434e896b-f463-4a71-e4c4-647b674db42c"
+        "outputId": "2d0f44c9-402b-4315-d4e3-b8bbf4877f71"
       },
       "execution_count": null,
       "outputs": [
@@ -942,7 +941,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total trainable params: 3530550\n"
+            "Total trainable params: 3523783\n"
           ]
         }
       ]
@@ -2886,7 +2885,7 @@
       "machine_shape": "hm",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPApTwNNPtTqsQijjwOPKuT",
+      "authorship_tag": "ABX9TyPAvm2okrCM18KCsPXRZVxi",
       "include_colab_link": true
     },
     "kernelspec": {
