--- a/AML_1)_EDA,Data_Prep.ipynb
+++ b/AML_1)_EDA,Data_Prep.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyOq8tNNbc3mmcpuVuEOZO4u",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOCF6/qte4UC0dBJuvr+hk9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,13 +84,10 @@
         "import seaborn as sb\n",
         "\n",
         "from datetime import datetime\n",
-        "from sklearn.cluster import KMeans\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "from sklearn.preprocessing import MinMaxScaler\n",
         "from sklearn.preprocessing import RobustScaler\n",
-        "from sklearn.model_selection import train_test_split\n",
         "from matplotlib.colors import LinearSegmentedColormap\n",
-        "from sklearn.feature_selection import mutual_info_regression\n",
         "from sklearn.feature_selection import mutual_info_classif"
       ],
       "metadata": {
@@ -23077,7 +23075,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##  🌹 df_combined_accounts : Save to Parguet 🌹\n",
+        "##  df_combined_accounts : Save to Parguet\n",
         "(for future quick re-running code)"
       ],
       "metadata": {
@@ -23771,7 +23769,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##  🌹 df_test1 : Save to Parguet 🌹\n",
+        "##  df_test1 : Save to Parguet\n",
         "(for future quick re-running code)"
       ],
       "metadata": {
@@ -24825,7 +24823,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##  🌹 df_test2 : Save to Parguet 🌹\n",
+        "##  df_test2 : Save to Parguet\n",
         "(for future quick re-running code)"
       ],
       "metadata": {
