--- a/AML_2)_Dataset_DataLoader.ipynb
+++ b/AML_2)_Dataset_DataLoader.ipynb
@@ -7,7 +7,7 @@
       "toc_visible": true,
       "machine_shape": "hm",
       "mount_file_id": "1mWk0ndToqfnviNyvSHXK92LoZ4Uhzwpu",
-      "authorship_tag": "ABX9TyOLu8U8HGs2R5Uxxaty58KL",
+      "authorship_tag": "ABX9TyMSDEPwpBBXR/zG0r1sjh3H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,33 +51,15 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sb\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.optim as optim\n",
-        "import os\n",
-        "\n",
-        "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
-        "from functools import partial\n",
-        "from torch.utils.data import Dataset, DataLoader\n",
-        "from datetime import datetime\n",
-        "from sklearn.cluster import KMeans\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
-        "from sklearn.preprocessing import MinMaxScaler\n",
-        "from sklearn.preprocessing import RobustScaler\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from torch.utils.data import Dataset, DataLoader\n",
-        "from torchvision.transforms import ToTensor\n",
-        "from sklearn.metrics import f1_score, roc_auc_score\n",
-        "from sklearn.metrics import confusion_matrix, precision_score, recall_score\n",
-        "from torch.nn.utils.rnn import pack_sequence"
+        "import numpy as np                                    # for numerical operations and array manipulations\n",
+        "import torch                                          # core PyTorch library\n",
+        "from torch.utils.data import Dataset, DataLoader      # for creating custom datasets and dataloaders\n",
+        "from sklearn.model_selection import train_test_split  # split datasets into training and testing subsets"
       ],
       "metadata": {
         "id": "ArRSaxh-7Tc4"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -92,7 +74,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# reloading\n",
+        "# reloading data from previous step\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "path_df_test2 = \"/content/drive/MyDrive/DE/Master_Degree/3rd_Semester/Colab_Notebook/AML_file/df_test2.parquet\"\n",
@@ -103,9 +85,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XiylgMcR7Ta1",
-        "outputId": "5326d929-3dd7-4fb7-d5cb-4dc335d1eaab"
+        "outputId": "1f3261fa-154a-4758-99b6-c22d03642d66"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,35 +134,28 @@
         "X_events2 = df_test2['events']  # Features\n",
         "y_targets2 = df_test2['targets']  # Targets\n",
         "\n",
-        "X_events_train2, X_events_eval_test2, y_targets_train2, y_targets_eval_test2 = train_test_split(X_events2, y_targets2, test_size=0.2, random_state=42)\n",
-        "\n",
-        "# create datasest\n",
-        "#train_dataset2 = pd.concat([X_events_train, y_targets_train], axis=1)\n",
-        "#eval_test_dataset2 = pd.concat([X_events_eval_test, y_targets_eval_test], axis=1)"
+        "X_events_train2, X_events_eval_test2, y_targets_train2, y_targets_eval_test2 = train_test_split(X_events2, y_targets2, test_size=0.2, random_state=42)\n"
       ],
       "metadata": {
         "id": "SN5mmr_806Vc"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#downsize only train set to handle data imbalance\n",
+        "# downsizing only train set to handle data imbalance\n",
         "y_targets_train_pos2 = y_targets_train2[y_targets_train2.apply(sum) > 0]\n",
         "y_targets_train_neg2 = y_targets_train2[y_targets_train2.apply(sum) == 0]\n",
         "y_targets_train_neg_sampled2 = y_targets_train_neg2.sample(frac=0.105, random_state=42)\n",
         "y_targets_train_downsampled2 = pd.concat([y_targets_train_neg_sampled2, y_targets_train_pos2]).sample(frac=1, random_state=42)\n",
-        "X_events_train_downsampled2 = X_events_train2[y_targets_train_downsampled2.index]\n",
-        "\n",
-        "# create datasest\n",
-        "#train_dataset_downsampled2 = pd.concat([X_events_train_downsampled, y_targets_train_downsampled], axis=1)"
+        "X_events_train_downsampled2 = X_events_train2[y_targets_train_downsampled2.index]\n"
       ],
       "metadata": {
         "id": "k_CnyiupGccf"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -193,9 +168,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7SnxgfJDG7vU",
-        "outputId": "d75bf3e9-400a-4f4f-a4a3-854694b17fa5"
+        "outputId": "6560161b-48d1-4e57-87d9-a5774d56b163"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +180,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 8
         }
       ]
     },
@@ -219,9 +194,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fGzKrlWBX7N5",
-        "outputId": "faa4488f-a41d-4cf7-9b8a-f63e2e5f28b2"
+        "outputId": "1e7551e3-59c3-4241-8801-9db897328286"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -231,50 +206,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 9
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "15721*5"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "w6qJ4s4OXSSL",
-        "outputId": "14a5c634-1b88-4264-8484-e117ea5ad7eb"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "78605"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# split portion of evaluation / test into evaluation (10%) and test (10%) sets.\n",
-        "X_events_eval2, X_events_test2, y_targets_eval2, y_targets_test2 = train_test_split(X_events_eval_test2, y_targets_eval_test2, test_size=0.5, random_state=42)\n",
-        "\n",
-        "# create datasest\n",
-        "#eval_dataset2 = pd.concat([X_events_eval, y_targets_eval], axis=1)\n",
-        "#test_dataset2 = pd.concat([X_events_test, y_targets_test], axis=1)\n"
+        "# split portion of evaluation:test into evaluation (10%) and test (10%) sets.\n",
+        "X_events_eval2, X_events_test2, y_targets_eval2, y_targets_test2 = train_test_split(X_events_eval_test2, y_targets_eval_test2, test_size=0.5, random_state=42)\n"
       ],
       "metadata": {
         "id": "_X_k99FYK6Ym"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -288,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_OZ85NDKL_XH",
-        "outputId": "db017dd8-408f-4566-bfce-c71728dbaec8"
+        "outputId": "a479f68e-ba50-4443-8d24-52e8535621ed"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +245,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 11
         }
       ]
     },
@@ -316,7 +261,7 @@
       "metadata": {
         "id": "z7IkjOkcShMX"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -333,9 +278,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "89Fuh7lKSUqB",
-        "outputId": "9296cb81-68ee-4f1c-d5ee-0a131bdb4070"
+        "outputId": "5b250be1-9f37-48c3-8df2-0630684a38f6"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +333,7 @@
       "metadata": {
         "id": "sXyEoKiiGS_9"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -421,19 +366,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SMS-E-Q7J0Mc",
-        "outputId": "80455a51-36fa-4291-df27-eca941b0242b"
+        "outputId": "73e52d09-d2b0-4833-fbcf-3cf66ae97628"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch.utils.data.dataloader.DataLoader at 0x7c72c4e7fa90>"
+              "<torch.utils.data.dataloader.DataLoader at 0x7bf4f2ad4970>"
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 15
         }
       ]
     },
@@ -445,7 +390,7 @@
       "metadata": {
         "id": "oMk8zseTWRTo"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -477,32 +422,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r-mZwBwxJ0KU",
-        "outputId": "be31fbd7-5e25-4668-ce2c-4c0598d828a7"
+        "outputId": "8f97a7d1-fb11-47e2-8234-75f5e81a56ba"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch.utils.data.dataloader.DataLoader at 0x7c72c4e7d690>"
+              "<torch.utils.data.dataloader.DataLoader at 0x7bf4f2ad4ca0>"
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 17
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# test_dataset.to_parquet(\"/content/drive/MyDrive/DE/Master_Degree/3rd_Semester/Colab_Notebook/AML_file/test_dataset.parquet\")\n"
-      ],
-      "metadata": {
-        "id": "wuyZ0_FPWXFQ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -533,19 +467,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OarG8t2MKATT",
-        "outputId": "e71e4808-3b12-4ec9-b916-577e221739e0"
+        "outputId": "ba0cfaf5-4274-40de-99e0-ab2b42871d4a"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch.utils.data.dataloader.DataLoader at 0x7c72c4e7e8c0>"
+              "<torch.utils.data.dataloader.DataLoader at 0x7bf4f2ad7a60>"
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 18
         }
       ]
     },
@@ -569,7 +503,7 @@
       "metadata": {
         "id": "a221P0BDJsoM"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -583,7 +517,7 @@
       "metadata": {
         "id": "hRO9AN2ZWM8t"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -597,7 +531,7 @@
       "metadata": {
         "id": "9i6Ym19dWNbL"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     }
   ]
