--- a/AML_3)_LSTM_Model_Training.ipynb
+++ b/AML_3)_LSTM_Model_Training.ipynb
@@ -891,7 +891,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### visualize optimal trial results\n",
+        "### Visualize optimal trial results\n",
         "\n",
         "early stopping triggered at epoch 24"
       ],
@@ -902,7 +902,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# retrive optimal trail results\n",
+        "# retrive optimal trial results\n",
         "log_directory = '/content/drive/MyDrive/DE/Master_Degree/3rd_Semester/Colab_Notebook/AML_file/exp/optuna/bestparam5/trial_12/'\n",
         "\n",
         "# list all Parquet files in the directory\n",
@@ -1843,7 +1843,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### optimal model"
+        "### Optimal model"
       ],
       "metadata": {
         "id": "MEzlEeOoc-mx"
@@ -2709,7 +2709,7 @@
       "machine_shape": "hm",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN2CgkEmYM7s7V/CsFgwjvZ",
+      "authorship_tag": "ABX9TyONKkTSctLS4CwSibaGjtwq",
       "include_colab_link": true
     },
     "kernelspec": {
